flow_apps/KnowledgeTree/force-app/main/default/objects/DiagnosticNode__c/fields/Continuation_Node__c.field-meta.xml
<CustomField>
    <fullName>Continuation_Node__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continuation Node</label>
    <type>Checkbox</type>
</CustomField>