flow_apps/KnowledgeTree/force-app/main/default/objects/DiagnosticNode__c/fields/ContinuationDiagnosticNode__c.field-meta.xml
<CustomField>
    <fullName>ContinuationDiagnosticNode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Continuation Node is marked true, lookup to the next Diagnostic Node this continuation node will lead to.</inlineHelpText>
    <label>ContinuationDiagnosticNode</label>
    <referenceTo>DiagnosticNode__c</referenceTo>
    <relationshipLabel>DiagnosticNodes</relationshipLabel>
    <relationshipName>ContinuationDiagnosticNodes</relationshipName>
    <type>Lookup</type>
</CustomField>