flow_apps/KnowledgeTree/force-app/main/default/objects/DiagnosticNode__c/fields/End_Node__c.field-meta.xml
<CustomField>
    <fullName>End_Node__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End Node</label>
    <type>Checkbox</type>
</CustomField>