flow_apps/KnowledgeTree/force-app/main/default/objects/DiagnosticNode__c/fields/Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Knowledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>DiagnosticNodes (Knowledge)</relationshipLabel>
    <relationshipName>DiagnosticNodes</relationshipName>
    <type>Lookup</type>
</CustomField>