flow_apps/KnowledgeTree/force-app/main/default/objects/DiagnosticNode__c/fields/KnowledgeId__c.field-meta.xml
<CustomField>
    <fullName>KnowledgeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KnowledgeId</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipName>DiagnosticSteps</relationshipName>
    <type>Lookup</type>
</CustomField>