flow_apps/KnowledgeTree/force-app/main/default/objects/DiagnosticNode__c/fields/Use_Knowledge_Article_Content__c.field-meta.xml
<CustomField>
    <fullName>Use_Knowledge_Article_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Knowledge Article Content</label>
    <type>Checkbox</type>
</CustomField>